corrected issue with follow/unfollow button not showing correctly

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,6 +11,11 @@ body {
   h4, .h4 {
     font-size: 1.3rem;
   }
+
+  .hide {
+    display: none;
+  }
+
   header {
     nav {
       a,span {
